# airbnb-clone-coding

./: readme.md
LECTURE/: 2OOP WITH PYTHON.py
aribnb-clone-backend/: .gitignore  pyproject.toml
aribnb-clone-backend/bookings/: models.py  serializers.py
aribnb-clone-backend/bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
aribnb-clone-backend/categories/: models.py  serializers.py  urls.py  views.py
aribnb-clone-backend/categories/migrations/: 0001_initial.py  0002_alter_category_options.py
aribnb-clone-backend/common/: permissions.py
aribnb-clone-backend/config/: authentication.py  settings.py  urls.py
aribnb-clone-backend/direct_messages/: models.py
aribnb-clone-backend/direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
aribnb-clone-backend/experiences/: models.py
aribnb-clone-backend/experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py  0003_alter_experience_category_alter_experience_host_and_more.py
aribnb-clone-backend/medias/: models.py
aribnb-clone-backend/medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file_alter_video_file.py
aribnb-clone-backend/reviews/: admin.py  models.py  views.py
aribnb-clone-backend/rooms/: admin.py  models.py  schema.py  serializers.py  tests.py  types.py  urls.py  views.py
aribnb-clone-backend/users/: admin.py  models.py  urls.py  views.py
aribnb-clone-backend/wishlists/: models.py  views.py
(+31 files in other folders)
