[tool.poetry]
name = "aribnb-clone-backend"
version = "0.1.0"
description = ""
authors = ["yun <austru00@gmail.com>"]
readme = "README.md"
packages = [{include = "aribnb_clone_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
pillow = "^9.5.0"
djangorestframework = "^3.14.0"
strawberry-graphql = {extras = ["debig-server"], version = "^0.177.1"}
strawberry-graphql-django = "^0.9.4"
pyjwt = "^2.7.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
